<resources>
    <string name="app_name">ZA Player</string>
    <string name="all_videos">All Videos</string>
    <string name="all_folders">All Folders</string>
    <string name="total_videos">Total Videos</string>
    <string name="total_folders">Total Folders</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="feedback">Feedback</string>
    <string name="themes">Themes</string>
    <string name="sort_order">Sort Order</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="nav_text">Welcome to World of Entertainment</string>
    <string name="video_name">Video Name</string>
    <string name="folder_name">Folder Name</string>
    <string name="duration">00:00</string>
    <string name="image">Image</string>
    <string name="loading">loading..</string>
    <string name="semi_colon">:</string>

    <string name="prev_btn">Previous Button</string>
    <string name="repeat_btn">Repeat Button</string>
    <string name="next_btn">Next Button</string>
    <string name="fullscreen_btn">Full screen Button</string>
    <string name="play_btn">Play Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    for menu-->
    <string name="audio_track">Audio Track</string>
    <string name="subtitles">Subtitles</string>
    <string name="booster">Booster</string>
    <string name="speed">Speed</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="pip_mode">PIP Mode</string>
    <string name="search">Search</string>

    <!--    for video more features-->
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="info">Info</string>
    <string name="share">Share</string>
    <string name="view">View</string>
    <string name="_0">0</string>
</resources>