<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    android:clickable="true"
    android:focusable="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:paddingHorizontal="10dp"
        android:gravity="center"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/videoImg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/player_icon_sq_launcher_round"
            android:contentDescription="@string/image"
            app:shapeAppearanceOverlay="@style/curved"
            />

        <LinearLayout
            android:layout_marginHorizontal="5dp"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/videoName"
                android:text="@string/video_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:maxLines="2"
                />
            <TextView
                android:id="@+id/folderName"
                android:text="@string/folder_name"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:maxLines="1"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/duration"
            android:gravity="center"
            android:text="@string/duration"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>



</com.google.android.material.card.MaterialCardView>