<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#42000000"
     >

  <LinearLayout
      android:id="@+id/topController"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:orientation="horizontal"
      android:background="#42000000"
      >

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/back_icon"
        android:background="?attr/selectableItemBackground"
        app:tint="@color/white"
        android:contentDescription="@string/prev_btn"/>

    <TextView
        android:id="@+id/videoTitle"
        android:textStyle="bold"
        android:text="@string/video_name"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:singleLine="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:ellipsize="marquee"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"/>

    <ImageButton
        android:id="@+id/changeView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/orientation_icon"
        android:background="?attr/selectableItemBackground"
        app:tint="@color/white"
        android:contentDescription="@string/prev_btn"/>

    <ImageButton
        android:id="@+id/moreFeatureBtn"
        android:layout_marginEnd="50dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/menu_icon"
        android:background="?attr/selectableItemBackground"
        app:tint="@color/white"
        android:contentDescription="@string/prev_btn"/>



  </LinearLayout>






  <ImageButton
      android:id="@+id/playPauseBtn"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:contentDescription="@string/play_btn"
      android:src="@drawable/play_icon"
      app:tint="@color/white"
      android:background="?attr/selectableItemBackground"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />


  <LinearLayout
      android:id="@+id/bottomController"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:gravity="end|bottom"
      >

    <ImageButton
        android:id="@+id/repeatBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/repeat_icon"
        app:tint="@color/white"
        android:contentDescription="@string/repeat_btn"
        />


    <ImageButton
        android:id="@+id/prevBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/previous_icon"
        app:tint="@color/white"
        android:contentDescription="@string/prev_btn"/>


    <ImageButton
        android:id="@+id/nextBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/next_icon"
        app:tint="@color/white"
        android:contentDescription="@string/next_btn"/>

    <ImageButton
        android:id="@+id/fullScreenBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/full_screen_exit_icon"
        app:tint="@color/white"
        android:contentDescription="@string/fullscreen_btn"/>

  </LinearLayout>

  <com.google.android.exoplayer2.ui.DefaultTimeBar
      android:id="@id/exo_progress"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="5dp"
      android:layout_marginBottom="50dp"
      app:buffered_color="#80FFFFFF"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:played_color="@color/white"
      app:scrubber_color="@color/white"
      app:scrubber_disabled_size="5dp"
      app:scrubber_enabled_size="10dp"
      app:unplayed_color="#80FFFFFF" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="10dp"
      android:orientation="horizontal"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/bottomController"
      app:layout_constraintStart_toStartOf="parent">


    <TextView
        android:id="@id/exo_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/duration"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/semi_colon"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />


    <TextView
        android:id="@id/exo_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/loading"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
